--- a/02-transcriptomics.Rmd
+++ b/02-transcriptomics.Rmd
@@ -153,6 +153,7 @@ se <-
   se %>% 
   filter(!BAM_ID %in% exclude_BAM)
 ```
+
 ## Explorative data analysis
 ### Principle component analysis (PCA)
 ```{r PCA, include = TRUE}
@@ -323,7 +324,7 @@ I performed `Likelihood Ratio Test (LRT)` to test the genes react in the conditi
 ```{r model time (visit)}
 
 # clean the environment for parallel 
-rm(list = ls()[ls() != "se"])
+# rm(list = ls()[ls() != "se"])
 
 # LS vs NL
 se_t_LSvsNL <- se %>% filter(skin_type %in% c("LS", "NL"))
@@ -454,6 +455,88 @@ heatmap_de_model(de_q_NLvsNN_m)
 
 
 ## Gene Set Analysis
+```{r gsa}
+
+# calc gene rank
+rank <- de_v1_LSvsNN %>% pivot_transcript() %>% pull(WaldStatistic_skin_type_LS_vs_NN)
+names(rank) <- de_v1_LSvsNN %>% pivot_transcript() %>% pull(feature)
+
+
+rank_log2fc_padj <- de_v1_LSvsNN_result %>% mutate(rank = log2FoldChange * -log10(padj)) %>% pull(rank)
+names(rank_log2fc_padj) <- de_v1_LSvsNN_result %>% pull(gene_name)
+  
+# create gene set
+
+# msigdbr::msigdbr_collections()
+# msigdbr_gene <- msigdbr::msigdbr() %>% pull(gene_symbol) %>% unique()
+
+gsc <-
+  msigdbr::msigdbr(species = "Homo sapiens") %>%
+  filter(gs_cat == "H")
+
+fun_extract_g_symbol <- function(gene_df){
+  gene_df %>% pull(gene_symbol)
+}
+
+gsc_list <- gsc %>% select(gs_name, gene_symbol) %>% 
+  group_by(gs_name) %>% tidyr::nest() %>% 
+  mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
+gse_list_m <- gsc_list$gene_id 
+names(gse_list_m) <- gsc_list$gs_name
+
+
+wiki_pathway_df <- msigdbr::msigdbr(species = "Homo sapiens", 
+                                    subcategory = "CP:WIKIPATHWAYS") %>% 
+  group_by(gs_name) %>% tidyr::nest() %>% 
+  mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
+wiki_pathway_list <- wiki_pathway_df$gene_id
+names(wiki_pathway_list) <-wiki_pathway_df$gs_name
+
+
+
+reactome_df <- msigdbr::msigdbr(species = "Homo sapiens", 
+                                subcategory = "CP:REACTOME") %>% 
+  group_by(gs_name) %>% tidyr::nest() %>% 
+  mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
+reactome_list <- reactome_df$gene_id
+names(reactome_list) <- reactome_df$gs_name
+
+gobp_df <- msigdbr::msigdbr(species = "Homo sapiens", 
+                                subcategory = "GO:BP") %>% 
+  group_by(gs_name) %>% tidyr::nest() %>% 
+  mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
+gobp_list <- gobp_df$gene_id
+names(gobp_list) <- gobp_df$gs_name
+
+fgseaRes_gobp <- fgsea::fgsea(pathways = gobp_list, 
+                       stats    = rank_log2fc_padj,
+                       minSize  = 15,
+                       maxSize  = 500, eps = 0)
+
+
+fgseaRes_wiki <- fgsea::fgsea(pathways = wiki_pathway_list, 
+                       stats    = rank_log2fc_padj,
+                       minSize  = 15,
+                       maxSize  = 500, eps = 0)
+
+fgseaRes_H <- fgsea::fgsea(pathways = gse_list_m, 
+                       stats    = rank_log2fc_padj,
+                       minSize  = 15,
+                       maxSize  = 500, eps = 0)
+
+fgseaRes_reactome <- fgsea::fgsea(pathways = reactome_list, 
+                           stats    = rank_log2fc_padj,
+                           minSize  = 15,
+                           maxSize  = 500, eps = 0)
+
+topPathwaysUp <- fgseaRes_gobp[ES > 0][head(order(pval), n=10), pathway]
+topPathwaysDown <- fgseaRes_gobp[ES < 0][head(order(pval), n=10), pathway]
+topPathways <- c(topPathwaysUp, rev(topPathwaysDown))
+plotGseaTable(gobp_list[topPathways], rank_log2fc_padj, fgseaRes_gobp, 
+              gseaParam=0.5)
+```
+
+
 
 ## Cell Type Deconvolution
 ```{r}
@@ -463,31 +546,7 @@ heatmap_de_model(de_q_NLvsNN_m)
 
 ## Varian Partition (to work)
 
-```{r input data, eval=FALSE, echo=TRUE}
-
-# metadata -------------------------
-metadata <- 
-
-# -----------------------------------
-
-# gene expression data -------------
-countable <- dl$countable[,metadata$BAM_ID] %>% as.matrix()
-rownames(countable) <- dl$gene_annotation$Geneid
-geneExpr <- DGEList(countable)
-geneExpr <- calcNormFactors(geneExpr)
-
-# formula --------------------------
-countable <- dl$countable[,metadata$BAM_ID] %>% as.matrix()
-rownames(countable) <- dl$gene_annotation$Geneid
-geneExpr <- DGEList(countable)
-geneExpr <- calcNormFactors(geneExpr)
-form <- ~ skin_type + (1|subject) + visit
-v_obj_dream <- voomWithDreamWeights(geneExpr, form, metadata)
-```
-
-
-```{r variance explained, eval=FALSE, echo=TRUE}
-
+```{r variance explained, echo=TRUE}
 vp <- 
   variancePartition::fitExtractVarPartModel(
     assay(se, 2), 
@@ -506,4 +565,67 @@ vp_500 <- variancePartition::fitExtractVarPartModel(
     )
 variancePartition::plotVarPart(vp_500)
 ```
+
+```{r VP core gene}
+se_core <- se[names(se) %in% (de_v1_c %>% pull(gene_name)), ]
+vp_core <- variancePartition::fitExtractVarPartModel(
+    assay(se_core, 2), 
+    ~ (1|skin_type) + (1|subject) + (1|visit_quarter) + (1|gender), 
+    colData(se_core) %>% as_tibble()
+    )
+variancePartition::plotVarPart(vp_core)
+
+variancePartition::plotPercentBars(
+  head(vp_core[order(vp_core$skin_type, decreasing = TRUE),], 15))
+
+vp_core %>% 
+  data.frame() %>% 
+  rownames_to_column(var = "gene_name") %>% 
+  filter(gene_name %>% str_detect("^IL\\d{1}")) %>% 
+  arrange(-skin_type) %>% 
+  pivot_longer(cols = !gene_name, names_to = "term") %>% 
+  ggplot(aes(gene_name, value, fill = term)) +
+  geom_bar(stat = "identity") +
+  coord_flip()
+
+IL_vp <- vp_core %>% 
+  data.frame() %>% 
+  rownames_to_column(var = "gene_name") %>% 
+  filter(gene_name %>% str_detect("^IL\\d{1}")) %>% 
+  arrange(-skin_type) %>% 
+  pivot_longer(cols = !gene_name, names_to = "term") %>% 
+  filter(term == "skin_type") %>% 
+  mutate(var_explained = round(value * 100, 2))
+
+ggpubr::ggdotchart(
+  IL_vp, x = "gene_name", y = "var_explained",
+  color = "#FC4E07",
+  sorting = "descending",
+  rotate = TRUE, 
+  add = "segments",
+  # label = IL_vp$value,
+  # font.label = list(color = "white", size = 3, vjust = 0.5),
+  ggtheme = ggpubr::theme_pubr(),
+  dot.size = 4,
+  ylab = "Var% explained by atopic dermatitis tissue"
+)
+```
+
+```{r}
+vp_core_t <- 
+  vp_core %>% 
+  data.frame() %>% 
+  rownames_to_column(var = "gene_name")
+
+vp_core <- 
+  de_v1_c %>% 
+  left_join(vp_core_t %>% select(gene_name, skin_type) %>% rename(var_explained = skin_type))
+```
+
+```{r}
+vp_core %>% 
+  DT::datatable()
+
+```
+
 
