--- a/02-transcriptomics.Rmd
+++ b/02-transcriptomics.Rmd
@@ -15,10 +15,10 @@ library(ComplexHeatmap)
 library(DT)
 library(BiocParallel)
 library(DESeq2)
-knitr::opts_chunk$set(cache = TRUE, message = FALSE, warning = FALSE, echo = FALSE)
+knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = FALSE)
 ```
 
-```{r load data, cache=TRUE}
+```{r load data}
 # read raw counts ---------------------------------------
 counts <-
   gzfile("../multiomics-ad-transcriptomics/data/counts/counts_gene_name_redo.txt.gz") %>%
@@ -41,7 +41,7 @@ source("../multiomics-ad-transcriptomics/R/helper.R")
 
 counttable_LibMerged <- 
   bind_cols(counts[, 1:6], 
-            counttable_merge_library_fun(counts %>% select(-1:-6), lib_id_merge)) 
+            counttable_merge_library_fun(counts %>% dplyr::select(-1:-6), lib_id_merge)) 
 
 # clinical records ------------------------
 clinical_records <- 
@@ -84,7 +84,7 @@ se <- SummarizedExperiment::SummarizedExperiment(
 names(se) <- counttable_LibMerged$Geneid
 ```
 
-```{r filtering}
+```{r filtering, cache=TRUE}
 # filter out genes 
 se <- se %>% keep_abundant(factor_of_interest = skin_type) %>% scale_abundance()
 
@@ -148,10 +148,8 @@ exclude_BAM <-
   filter(exclude == TRUE) %>% pull(BAM_ID)
 ```
 
-```{r generate new se, cache.lazy=FALSE}
-se <- 
-  se %>% 
-  filter(!BAM_ID %in% exclude_BAM)
+```{r generate new se, cache = TRUE}
+se <- se[, !se$BAM_ID %in% exclude_BAM]
 ```
 
 ## Explorative data analysis
@@ -256,11 +254,21 @@ ComplexHeatmap::Heatmap(heatmap_data_m,
 
 ### Baseline
 
-```{r DGE-V1, echo=TRUE}
+At the baseline, the number of dysregulated genes are:
+
+* `LSvsNL`: `r knitr::load_cache("DGE-V1", "n_de_v1_LSvsNL_up")` up-regulated and r knitr::load_cache("DGE-V1", "n_de_v1_LSvsNL_down") down-regulated;
+* `LSvsNN`: r r knitr::load_cache("DGE-V1", "n_de_v1_LSvsNN_up") up-regulated and r knitr::load_cache("DGE-V1", "n_de_v1_LSvsNN_down") down-regulated
+* `NLvsNN`: `r knitr::load_cache("DGE-V1", "n_de_v1_NLvsNN_up") up-regulated and r knitr::load_cache("DGE-V1", "n_de_v1_NLvsNN_down") down-regulated
+
+```{r pri-DGE-cleaning}
 # cleaning
 rm(list = ls()[ls() != "se"])
-
 register(MulticoreParam(7))
+```
+
+
+```{r DGE-V1, cache=TRUE}
+
 # V1 LSvsNL --------------------
 se_v1_LSvsNL <- se[, se$visit == "01" & se$skin_type %in% c("LS", "NL")]
 de_v1_LSvsNL <- DESeq2::DESeqDataSet(se_v1_LSvsNL, ~ subject + skin_type) %>% DESeq2::DESeq(parallel = TRUE)
@@ -279,13 +287,30 @@ de_v1_NLvsNN <- DESeq2::DESeqDataSet(se_v1_NLvsNN, ~ gender + skin_type) %>% DES
 de_v1_NLvsNN_LFC <- lfcShrink(de_v1_NLvsNN, coef = "skin_type_NL_vs_NN", type = "apeglm", parallel = TRUE, quiet = TRUE)
 de_v1_NLvsNN_result <- bind_cols(tibble(gene_name = rownames(de_v1_NLvsNN)), de_v1_NLvsNN_LFC %>% as_tibble())
 de_v1_NLvsNN_result_s <- de_v1_NLvsNN_result %>% filter(padj < .05, abs(log2FoldChange) > 1)
-```
-
-```{r Consolidate Results display}
+# Consolidate the results -----
 de_v1_c <-
   bind_rows(de_v1_LSvsNL_result_s %>% mutate(contrast = "LSvsNL"),
             de_v1_LSvsNN_result_s %>% mutate(contrast = "LSvsNN"),
             de_v1_NLvsNN_result_s %>% mutate(contrast = "NLvsNN")) %>% 
+  mutate(direction = ifelse(log2FoldChange > 0, "up", "down"))
+
+de_v1_c_s <-
+  de_v1_c %>% 
+  group_by(contrast, direction) %>% 
+  summarise(n_dys = n())
+
+# No of dysregulated genes
+n_de_v1_LSvsNL_up <- de_v1_c_s %>% filter(contrast == "LSvsNL", direction == "up") %>% pull(n_dys)
+n_de_v1_LSvsNL_down <- de_v1_c_s %>% filter(contrast == "LSvsNL", direction == "down") %>% pull(n_dys)
+n_de_v1_LSvsNN_up <- de_v1_c_s %>% filter(contrast == "LSvsNN", direction == "up") %>% pull(n_dys)
+n_de_v1_LSvsNN_down <- de_v1_c_s %>% filter(contrast == "LSvsNN", direction == "down") %>% pull(n_dys)
+n_de_v1_NLvsNN_up <- de_v1_c_s %>% filter(contrast == "NLvsNN", direction == "up") %>% pull(n_dys)
+n_de_v1_NLvsNN_down <- de_v1_c_s %>% filter(contrast == "NLvsNN", direction == "down") %>% pull(n_dys)
+```
+
+```{r Consolidate Results display}
+
+de_v1_c_d <- de_v1_c %>% 
   select(gene_name, log2FoldChange, padj, contrast) %>% 
   pivot_wider(names_from = contrast, values_from = c("log2FoldChange", "padj")) %>% 
   arrange(-log2FoldChange_LSvsNL)
@@ -304,24 +329,22 @@ t_container <- htmltools::withTags(table(
   )
 ))
   
-datatable(de_v1_c, colnames = c("gene name", "LSvsNL", "LSvsNN", "NLvsNN", "LSvsNL", "LSvsNN", "NLvsNN"), container = t_container, rownames = FALSE,
+datatable(de_v1_c_d, 
+          colnames = c("gene name", "LSvsNL", "LSvsNN", "NLvsNN", "LSvsNL", "LSvsNN", "NLvsNN"), container = t_container, rownames = FALSE,
           options = list(pageLength = 20)) %>% 
-  formatRound(de_v1_c %>% colnames %>% str_extract("log2FoldChange_\\w{6}") %>% purrr::discard(is.na)) %>% 
-  formatSignif(de_v1_c %>% colnames %>% str_extract("padj_\\w{6}") %>% purrr::discard(is.na), digits = 3)
+  formatRound(de_v1_c_d %>% colnames %>% str_extract("log2FoldChange_\\w{6}") %>% purrr::discard(is.na)) %>% 
+  formatSignif(de_v1_c_d %>% colnames %>% str_extract("padj_\\w{6}") %>% purrr::discard(is.na), digits = 3)
 ```
-
-Number of dysregulated genes at visit 1:
-
-* `LSvsNL`: `r de_v1_LSvsNL_result_s %>% filter(log2FoldChange > 0) %>% nrow` up-regulated and `r de_v1_LSvsNL_result_s %>% filter(log2FoldChange < 0) %>% nrow` down-regulated;
-* `LSvsNN`: `r de_v1_LSvsNN_result_s %>% filter(log2FoldChange > 0) %>% nrow` up-regulated and `r de_v1_LSvsNN_result_s %>% filter(log2FoldChange > 0) %>% nrow` down-regulated
-* `NLvsNN`: `r de_v1_NLvsNN_result_s %>% filter(log2FoldChange > 0) %>% nrow` up-regulated and `r de_v1_NLvsNN_result_s %>% filter(log2FoldChange < 0) %>% nrow` down-regulated
-
 
 ### Time Effect
 
-I performed `Likelihood Ratio Test (LRT)` to test the genes react in the condition-specific manner over time, compared to baseline samples. I first specify a `full model` containing all terms. Then test a `reduced model`.
+I performed `Likelihood Ratio Test (LRT)` to test the genes react in the **condition-specific manner over time**, compared to baseline samples. 
 
-```{r model time (visit)}
+> The likelihood-ratio test assesses the goodness of fit of two competing statistical models based on the ratio of their likelihoods, specifically one found by maximization over the entire parameter space and another found after imposing some constraint. If the constraint (i.e., the null hypothesis) is supported by the observed data, the two likelihoods should not differ by more than sampling error. @RN24
+
+I first fit a `full model` (`~ subject + time + tissue_type + tissue_type * time`), then a `reduced model` (`~ subject + time + tissue_type`) by imposing `tissue_type * time` as the constraint. 
+
+```{r model time (visit), cache=TRUE}
 
 # clean the environment for parallel 
 # rm(list = ls()[ls() != "se"])
@@ -334,7 +357,7 @@ de_t_LSvsNL_m <- DESeq2::DESeq(de_t_LSvsNL, test="LRT",
                               reduced = ~  subject + visit + skin_type,
                               parallel = TRUE)
 
-deT_LSvsNL_res <- 
+de_t_LSvsNL_res <- 
   bind_cols(tibble(gene_name = names(de_t_LSvsNL_m)),
   DESeq2::results(de_t_LSvsNL_m) %>% as_tibble())
 
@@ -367,29 +390,97 @@ de_t_NLvsNN_res <-
   DESeq2::results(de_t_NLvsNN_m) %>% as_tibble())
 ```
 
-```{r model time(visit)-vis}
-betas <- coef(de_t_LSvsNN_m)
-colnames(betas)
-topGenes <- names(de_t_LSvsNN_m)[head(order(de_t_LSvsNN_res$padj),20)]
-mat <- betas[topGenes, -c(1,2)]
-thr <- 3 
-mat[mat < -thr] <- -thr
-mat[mat > thr] <- thr
-pheatmap(mat, breaks=seq(from=-thr, to=thr, length=101),
-         cluster_col=FALSE)
+```{r model time(visit)-summary}
+de_t_c_res <- 
+  bind_rows(de_t_LSvsNL_res %>% mutate(contrast = "LSvsNL_v"),
+            de_t_LSvsNN_res %>% mutate(contrast = "LSvsNN_v"),
+            de_t_NLvsNN_res %>% mutate(contrast = "NLvsNN_v")) %>% 
+  filter(padj < .05)
+
+de_t_c_res_s <-
+  de_t_c_res %>% 
+  group_by(contrast) %>% 
+  summarise(n_dysregulated_genes = n())
+
+de_t_c_res_s
 ```
 
+```{r model time(visit)-vis}
+heatmap_de_model <- 
+  function(de_model){
+    de_model_res <- 
+      bind_cols(tibble(gene_name = names(de_model)),
+                DESeq2::results(de_model) %>% as_tibble())
+    betas <- coef(de_model)
+    
+    topGenes <- 
+      de_model_res %>% filter(padj < .05) %>% arrange(padj) %>% 
+      head(20) %>% pull(gene_name)
+    
+    col_to_plot <- colnames(betas) %>%
+                   str_extract("(visit|visit_quarter)[:graph:]{1,}") %>% 
+                   purrr::discard(is.na)
+    mat <- betas[topGenes, col_to_plot]
+    colnames(mat) <- col_to_plot %>% str_remove("visit_quarter") %>% str_remove("^_")
+    thr <- 3 
+    mat[mat < -thr] <- -thr
+    mat[mat > thr] <- thr
+    pheatmap(mat, 
+             breaks=seq(from=-thr, to=thr, length=101), 
+             cluster_col=FALSE, angle_col = "45", 
+             main = deparse(substitute(de_model)) %>% str_extract("(LS|NL)vs(NL|NN)"))
+  }
 
+# betas <- coef(de_t_LSvsNL_m)
+# colnames(betas)
+# topGenes <- names(de_t_LSvsNN_m)[head(order(de_t_LSvsNN_res$padj),20)]
+# mat <- betas[topGenes, -c(1,2)]
+# thr <- 3 
+# mat[mat < -thr] <- -thr
+# mat[mat > thr] <- thr
+# pheatmap(mat, breaks=seq(from=-thr, to=thr, length=101),
+#          cluster_col=FALSE)
+heatmap_de_model(de_t_LSvsNL_m)
+heatmap_de_model(de_t_LSvsNN_m)
+heatmap_de_model(de_t_NLvsNN_m)
+```
 
-```{r model time(quarter)}
+```{r examples-time-effect}
+SPAAR <- plotCounts(de_t_LSvsNL_m, 
+                    gene = "SPAAR", 
+                    c("skin_type", "visit"), returnData = TRUE)
 
+SPAAR %>% 
+  ggplot(aes(x = visit, y = count, color = skin_type, group = skin_type)) +
+  geom_point() + stat_summary(fun = mean, geom = "line") + 
+  scale_y_log10()
+
+KRT27 <- plotCounts(de_t_LSvsNN_m, 
+                    gene = "KRT27", 
+                    c("skin_type", "visit"), returnData = TRUE)
+
+KRT27 %>% 
+  ggplot(aes(x = visit, y = count, color = skin_type, group = skin_type)) +
+  geom_point() + stat_summary(fun = mean, geom = "line") + 
+  scale_y_log10()
+
+KRT9 <- plotCounts(de_t_LSvsNN_m, 
+                    gene = "KRT9", 
+                    c("skin_type", "visit"), returnData = TRUE)
+
+KRT9 %>% 
+  ggplot(aes(x = visit, y = count, color = skin_type, group = skin_type)) +
+  geom_point() + stat_summary(fun = mean, geom = "line") + 
+  scale_y_log10()
+```
+
+```{r model time(quarter), cache=TRUE}
 se <- se[, - which(is.na(se$visit_quarter))]
 se_q_LSvsNL <- se[, se$skin_type %in% c("LS", "NL")]
 se_q_LSvsNN <- se[, se$skin_type %in% c("LS", "NN")]
 se_q_NLvsNN <- se[, se$skin_type %in% c("NL", "NN")]
 
 # LS vs NL
-
 de_q_LSvsNL <- DESeq2::DESeqDataSet(se_q_LSvsNL, ~ subject + visit_quarter + skin_type + skin_type * visit_quarter)
 
 de_q_LSvsNL_m <- DESeq2::DESeq(de_q_LSvsNL, test="LRT", 
@@ -401,7 +492,6 @@ de_q_LSvsNL_res <-
   DESeq2::results(de_q_LSvsNL_m) %>% as_tibble())
 
 # LS vs NN
-
 de_q_LSvsNN <- DESeq2::DESeqDataSet(se_q_LSvsNN, ~  gender + visit_quarter + skin_type + skin_type * visit_quarter)
 
 de_q_LSvsNN_m <- DESeq2::DESeq(de_q_LSvsNN, test="LRT", 
@@ -422,30 +512,22 @@ de_q_NLvsNN_res <-
   DESeq2::results(de_q_NLvsNN_m) %>% as_tibble())
 ```
 
-```{r model time(quarter)-vis}
-heatmap_de_model <- 
-  function(de_model){
-    de_model_res <- 
-      bind_cols(tibble(gene_name = names(de_model)),
-                DESeq2::results(de_model) %>% as_tibble())
-    betas <- coef(de_model)
-    
-    topGenes <- names(de_model)[head(order(de_model_res$padj),20)]
-    col_to_plot <- colnames(betas) %>%
-                   str_extract("visit_quarter[:graph:]{1,}") %>% 
-                   purrr::discard(is.na)
-    mat <- betas[topGenes, col_to_plot]
-    colnames(mat) <- col_to_plot %>% str_remove("visit_quarter") %>% str_remove("^_")
-    thr <- 3 
-    mat[mat < -thr] <- -thr
-    mat[mat > thr] <- thr
-    pheatmap(mat, 
-             breaks=seq(from=-thr, to=thr, length=101), 
-             cluster_col=FALSE, angle_col = "45", 
-             main = deparse(substitute(de_model)) %>% str_extract("(LS|NL)vs(NL|NN)"))
-  }
+```{r model time(quarter)-summary}
+de_q_c_res <- 
+  bind_rows(de_q_LSvsNL_res %>% mutate(contrast = "LSvsNL_q"),
+            de_q_LSvsNN_res %>% mutate(contrast = "LSvsNN_q"),
+            de_q_NLvsNN_res %>% mutate(contrast = "NLvsNN_q")) %>% 
+  filter(padj < .05)
 
-heatmap_de_model(de_q_LSvsNL_m)
+de_q_c_res_s <-
+  de_q_c_res %>% 
+  group_by(contrast) %>% 
+  summarise(n_dys = n())
+
+de_q_c_res_s
+```
+
+```{r model time(quarter)-vis}
 heatmap_de_model(de_q_LSvsNN_m)
 heatmap_de_model(de_q_NLvsNN_m)
 ```
@@ -453,81 +535,84 @@ heatmap_de_model(de_q_NLvsNN_m)
 
 ### Space effect
 
-
 ## Gene Set Analysis
-```{r gsa}
+
+```{r save data, eval=FALSE}
+ls_gsa <- as.list(ls(pattern = "^de_v1_(LS|NL)vs(NL|NN)") %>% lapply(get))
+names(ls_gsa) <- ls(pattern = "^de_v1_(LS|NL)vs(NL|NN)")
+saveRDS(ls_gsa, "data/de_v1.rds")
+```
+
+```{r gsa, eval=FALSE, echo=TRUE}
 
 # calc gene rank
-rank <- de_v1_LSvsNN %>% pivot_transcript() %>% pull(WaldStatistic_skin_type_LS_vs_NN)
-names(rank) <- de_v1_LSvsNN %>% pivot_transcript() %>% pull(feature)
 
+# gene rank
+rank <- 
+  tibble(gene_name = names(se_v1_LSvsNL)) %>% 
+  left_join(de_v1_LSvsNL %>% pivot_transcript() %>% dplyr::select(gene_name = feature, WaldStatistic_skin_type_LS_vs_NL)) %>% 
+  left_join(de_v1_LSvsNN %>% pivot_transcript() %>% dplyr::select(gene_name = feature, WaldStatistic_skin_type_LS_vs_NN)) %>% 
+  left_join(de_v1_NLvsNN %>% pivot_transcript() %>% dplyr::select(gene_name = feature, WaldStatistic_skin_type_NL_vs_NN)) %>% 
+  left_join(de_v1_LSvsNL_result %>% mutate(rank_log2fc_LSvsNL = log2FoldChange * -log10(padj)) %>% dplyr::select(gene_name, rank_log2fc_LSvsNL)) %>% 
+  left_join(de_v1_LSvsNN_result %>% mutate(rank_log2fc_LSvsNN = log2FoldChange * -log10(padj)) %>% dplyr::select(gene_name, rank_log2fc_LSvsNN)) %>% 
+  left_join(de_v1_NLvsNN_result %>% mutate(rank_log2fc_NLvsNN = log2FoldChange * -log10(padj)) %>% dplyr::select(gene_name, rank_log2fc_NLvsNN)) %>% 
+  pivot_longer(cols = !gene_name, names_to = "rank_type", values_to = "rank") %>% 
+  group_by(rank_type) %>% nest() %>% 
+  mutate(rank_vect = purrr::map(data, deframe)) 
 
-rank_log2fc_padj <- de_v1_LSvsNN_result %>% mutate(rank = log2FoldChange * -log10(padj)) %>% pull(rank)
-names(rank_log2fc_padj) <- de_v1_LSvsNN_result %>% pull(gene_name)
-  
-# create gene set
-
-# msigdbr::msigdbr_collections()
-# msigdbr_gene <- msigdbr::msigdbr() %>% pull(gene_symbol) %>% unique()
-
-gsc <-
-  msigdbr::msigdbr(species = "Homo sapiens") %>%
-  filter(gs_cat == "H")
 
 fun_extract_g_symbol <- function(gene_df){
   gene_df %>% pull(gene_symbol)
 }
 
-gsc_list <- gsc %>% select(gs_name, gene_symbol) %>% 
-  group_by(gs_name) %>% tidyr::nest() %>% 
-  mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
-gse_list_m <- gsc_list$gene_id 
-names(gse_list_m) <- gsc_list$gs_name
+# prepare gs --------------
+extract_msigdb_sub <- function(subcat){
+  gs_df <- msigdbr::msigdbr(species = "Homo sapiens", 
+                            subcategory = subcat) %>% 
+    group_by(gs_name) %>% tidyr::nest() %>% 
+    mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
+  gs_list <- gs_df$gene_id
+  names(gs_list) <- gs_df$gs_name
+  return(gs_list)
+  }
 
 
-wiki_pathway_df <- msigdbr::msigdbr(species = "Homo sapiens", 
-                                    subcategory = "CP:WIKIPATHWAYS") %>% 
-  group_by(gs_name) %>% tidyr::nest() %>% 
-  mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
-wiki_pathway_list <- wiki_pathway_df$gene_id
-names(wiki_pathway_list) <-wiki_pathway_df$gs_name
+gs_name <-
+  c("CP:BIOCARTA", 
+       "CP:KEGG", 
+       "CP:PID", 
+       "CP:REACTOME", 
+       "CP:WIKIPATHWAYS", 
+       "MIR:MIRDB", 
+       "TFT:GTRD", 
+       "GO:BP", 
+       "GO:MF", 
+       "IMMUNESIGDB")
 
+gs_list <- lapply(gs_name, extract_msigdb_sub)
+names(gs_list) <- gs_name
 
+# prepare for gse analyse ----
+gse_exp <- 
+  expand.grid(rank = rank$rank_vect, 
+              gs = gs_list)
 
-reactome_df <- msigdbr::msigdbr(species = "Homo sapiens", 
-                                subcategory = "CP:REACTOME") %>% 
-  group_by(gs_name) %>% tidyr::nest() %>% 
-  mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
-reactome_list <- reactome_df$gene_id
-names(reactome_list) <- reactome_df$gs_name
+name <- 
+  expand.grid(ranktype = rank$rank_type, gs = gs_name) %>% 
+  mutate(name = paste(gs, ranktype, sep = "_")) %>% 
+  pull(name)
 
-gobp_df <- msigdbr::msigdbr(species = "Homo sapiens", 
-                                subcategory = "GO:BP") %>% 
-  group_by(gs_name) %>% tidyr::nest() %>% 
-  mutate(gene_id = purrr::map(data, fun_extract_g_symbol)) %>% select(-data)
-gobp_list <- gobp_df$gene_id
-names(gobp_list) <- gobp_df$gs_name
+gse_res <- purrr::map2(gse_exp$rank,
+                       gse_exp$gs,
+            function(rank, gs){
+  fgsea::fgsea(pathways = gs, 
+               stats    = rank,
+               minSize  = 15,
+               maxSize  = 500, eps = 0) %>% 
+  filter(padj < .05) %>% arrange(-NES)
+}) 
 
-fgseaRes_gobp <- fgsea::fgsea(pathways = gobp_list, 
-                       stats    = rank_log2fc_padj,
-                       minSize  = 15,
-                       maxSize  = 500, eps = 0)
-
-
-fgseaRes_wiki <- fgsea::fgsea(pathways = wiki_pathway_list, 
-                       stats    = rank_log2fc_padj,
-                       minSize  = 15,
-                       maxSize  = 500, eps = 0)
-
-fgseaRes_H <- fgsea::fgsea(pathways = gse_list_m, 
-                       stats    = rank_log2fc_padj,
-                       minSize  = 15,
-                       maxSize  = 500, eps = 0)
-
-fgseaRes_reactome <- fgsea::fgsea(pathways = reactome_list, 
-                           stats    = rank_log2fc_padj,
-                           minSize  = 15,
-                           maxSize  = 500, eps = 0)
+names(gse_res) <- name
 
 topPathwaysUp <- fgseaRes_gobp[ES > 0][head(order(pval), n=10), pathway]
 topPathwaysDown <- fgseaRes_gobp[ES < 0][head(order(pval), n=10), pathway]
@@ -537,16 +622,65 @@ plotGseaTable(gobp_list[topPathways], rank_log2fc_padj, fgseaRes_gobp,
 ```
 
 
-
 ## Cell Type Deconvolution
-```{r}
+```{r cibersort, cache=TRUE}
+se_deconvolute <- 
+  se %>% deconvolve_cellularity(prefix="cibersort_", cores = 7)
 
+se_deconvolute_l <-
+  se_deconvolute %>% 
+  pivot_sample() %>%
+  pivot_longer(
+    contains("cibersort"),
+    names_prefix = "cibersort_",
+    names_to = "cell_type",
+    values_to = "proportion"
+  )
+```
+
+```{r cibersort-vis}
+
+friendly_cols <- dittoSeq::dittoColors()
+
+custom_theme <-
+  list(
+    scale_fill_manual(values = friendly_cols),
+    scale_color_manual(values = friendly_cols),
+    theme_bw() +
+      theme(
+        panel.border = element_blank(),
+        axis.line = element_line(),
+        panel.grid.major = element_line(size = 0.2),
+        panel.grid.minor = element_line(size = 0.1),
+        text = element_text(size = 12),
+        legend.position = "bottom",
+        strip.background = element_blank(),
+        axis.title.x = element_text(margin = margin(t = 10, r = 10, b = 10, l = 10)),
+        axis.title.y = element_text(margin = margin(t = 10, r = 10, b = 10, l = 10)),
+        axis.text.x = element_text(angle = 30, hjust = 1, vjust = 1)
+      )
+  )
+
+se_deconvolute_l %>%
+  mutate(cell_type = cell_type %>% str_remove("cibersort..")) %>%
+  ggplot(aes(x = sample, y = proportion, fill = cell_type)) +
+  geom_bar(stat = "identity") +
+  facet_wrap(~skin_type, scales = "free") +
+  custom_theme + theme(axis.text.x = element_blank())
+
+# se_deconvolute_l %>% 
+#   mutate(cell_type = cell_type %>% str_remove("cibersort..")) %>%
+#   filter(subject == "AD_02") %>% 
+#   ggplot(aes(x = sample, y = proportion, fill = cell_type)) +
+#   geom_bar(stat = "identity") +
+#   facet_wrap(visit~skin_type, scales = "free") +
+#   custom_theme + theme(axis.text.x = element_blank())
 ```
 
 
 ## Varian Partition (to work)
 
-```{r variance explained, echo=TRUE}
+```{r vpall, eval=FALSE}
 vp <- 
   variancePartition::fitExtractVarPartModel(
     assay(se, 2), 
@@ -556,7 +690,7 @@ vp <-
 variancePartition::plotVarPart(vp)
 ```
 
-```{r}
+```{r vp500, eval=FALSE}
 se_500 <- se %>% keep_variable()
 vp_500 <- variancePartition::fitExtractVarPartModel(
     assay(se_500, 2), 
@@ -566,7 +700,7 @@ vp_500 <- variancePartition::fitExtractVarPartModel(
 variancePartition::plotVarPart(vp_500)
 ```
 
-```{r VP core gene}
+```{r VP core gene, cache=TRUE}
 se_core <- se[names(se) %in% (de_v1_c %>% pull(gene_name)), ]
 vp_core <- variancePartition::fitExtractVarPartModel(
     assay(se_core, 2), 
@@ -617,15 +751,36 @@ vp_core_t <-
   data.frame() %>% 
   rownames_to_column(var = "gene_name")
 
-vp_core <- 
-  de_v1_c %>% 
-  left_join(vp_core_t %>% select(gene_name, skin_type) %>% rename(var_explained = skin_type))
+vp_core <- de_v1_c_d %>%   
+  left_join(vp_core_t %>% select(gene_name, skin_type) %>% rename(var_explained = skin_type)) %>% 
+  mutate(var_explained)
+
 ```
 
 ```{r}
-vp_core %>% 
-  DT::datatable()
+vp_container <- htmltools::withTags(table(
+  class = 'display',
+  thead(
+    tr(
+      th(rowspan = 2, 'Gene name'),
+      th(colspan = 3, 'log2 Fold Change'),
+      th(colspan = 3, 'Adjusted p-value'),
+      th(rowspan = 2, 'Var% explained by AD tissue type')
+    ),
+    tr(
+      lapply(rep(c('LSvsNL', 'LSvsNN', "NLvsNN"), 2), th)
+    )
+  )
+))
 
+
+datatable(vp_core, 
+          colnames = c("gene name", "LSvsNL", "LSvsNN", "NLvsNN", "LSvsNL", "LSvsNN", "NLvsNN", "Var% explained by AD tissue type"), 
+          container = vp_container, rownames = FALSE,
+          options = list(pageLength = 20)) %>% 
+  formatRound(vp_core %>% colnames %>% str_extract("log2FoldChange_\\w{6}") %>% purrr::discard(is.na)) %>% 
+  formatSignif(vp_core %>% colnames %>% str_extract("padj_\\w{6}") %>% purrr::discard(is.na), digits = 3) %>% 
+  formatPercentage("var_explained", 2)
 ```
 
 
